--- a/src/Pages/Register/Register.module.css
+++ b/src/Pages/Register/Register.module.css
@@ -78,3 +78,14 @@ label {
   font-weight: bold;
   letter-spacing: 1px;
 }
+
+@media (max-width: 768px) {
+  .register {
+    width: 380px;
+  }
+}
+@media (max-width: 568px) {
+  .register {
+    width: 320px;
+  }
+}
