--- a/src/components/ChatComponets/Send.module.css
+++ b/src/components/ChatComponets/Send.module.css
@@ -2,21 +2,24 @@
   width: 100%;
   height: 70px;
   align-items: center;
-}
-
-.send i {
-  cursor: pointer;
+  justify-content: center;
 }
 
 .input {
   margin-top: 0;
   border: none;
+  flex: 6;
 }
 
 .more {
   width: 140px;
   justify-content: center;
   align-items: center;
+  flex: 1;
+}
+
+.more i {
+  cursor: pointer;
 }
 
 .send .more p {
@@ -30,4 +33,21 @@
   background-color: rgba(255, 255, 255, 0.4);
   padding: 3px;
   border-radius: 5px;
+}
+
+@media screen and (max-width: 576px) {
+  .send {
+    height: 50px;
+  }
+
+  .input {
+    font-size: 12px;
+  }
+  .more {
+    font-size: 12px;
+  }
+  .button {
+    font-size: 12px;
+    padding: 2px;
+  }
 }
