fix login and add search

--- a/src/components/ChatComponets/Send.module.css
+++ b/src/components/ChatComponets/Send.module.css
@@ -12,9 +12,9 @@
 }
 
 .more {
-  width: 140px;
+  display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   flex: 1;
 }
 
