--- a/src/components/sidebarComponents/Search.module.css
+++ b/src/components/sidebarComponents/Search.module.css
@@ -26,3 +26,8 @@
 .result::-webkit-scrollbar {
   display: none;
 }
+.result .chat_profile img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
