--- a/src/components/Modal/Loader.module.css
+++ b/src/components/Modal/Loader.module.css
@@ -1,11 +1,12 @@
 .container {
-  width: 200px;
-  height: 100px;
+  position: relative;
+  width: 250px;
+  height: 250px;
   text-align: center;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 100;
 }
 
 .loader_title {
